maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:14: error: type mismatch;
 found   : Unit
 required: Int
      conditionSuivreMur(droite(), gauche())
                               ^IslandMaze:14: error: type mismatch;
 found   : Unit
 required: Int
      conditionSuivreMur(droite(), gauche())
                                         ^IslandMaze:25: error: type mismatch;
 found   : Unit
 required: Int
          conditionSuivreMur(gauche(), droite())
                                   ^IslandMaze:25: error: type mismatch;
 found   : Unit
 required: Int
          conditionSuivreMur(gauche(), droite())
                                             ^IslandMaze:26: error: type mismatch;
 found   : Unit
 required: Int
        else conditionSuivreMur(droite(), gauche())
                                      ^IslandMaze:26: error: type mismatch;
 found   : Unit
 required: Int
        else conditionSuivreMur(droite(), gauche())
                                                ^IslandMaze:33: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    dir1
    ^IslandMaze:35: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      dir2
      ^IslandMaze:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      else dir2
           ^